--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.254",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.0.0"
   }
-} 
+}
