Converted to use Vite, Tailwind, and React

--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,11 @@
   "permissions": ["activeTab", "scripting", "storage"],
   "host_permissions": ["<all_urls>"],
   "background": {
-    "service_worker": "index.js",
+    "service_worker": "background.js",
     "type": "module"
   },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "src/popup/index.html"
   },
   "content_scripts": [
     {
