--- a/package.json
+++ b/package.json
@@ -2,16 +2,30 @@
   "name": "deal-pop-chrome-extension",
   "version": "1.0.0",
   "description": "DealPop Chrome Extension",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
+    "dev": "vite",
+    "build": "tsc && vite build && cp manifest.json dist/",
     "build:watch": "tsc --watch",
-    "dev": "npm run build && npm run build:watch"
+    "preview": "vite preview",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.254",
     "@types/jest": "^30.0.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "jest": "^30.0.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.4.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^5.0.8"
   }
 }
