feat: integrate Firebase authentication and API client
- Replace email/password auth with Firebase Google OAuth
- Add Firebase configuration and auth service
- Create centralized API client with auto token refresh
- Update manifest for Firebase host permissions
- Add .gitignore rules for TypeScript build artifacts
- Improve error handling and token management
- Remove deprecated login handler from background script

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,16 @@
   "manifest_version": 3,
   "name": "DealPop Tracker",
   "version": "1.0",
-  "permissions": ["activeTab", "scripting", "storage"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": ["activeTab", "scripting", "storage", "tabs"],
+  "host_permissions": [
+    "<all_urls>",
+    "https://deal-pop.firebaseapp.com/*",
+    "https://*.googleapis.com/*",
+    "https://accounts.google.com/*"
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
   "background": {
     "service_worker": "background.js",
     "type": "module"
