--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run clean && vite build",
+    "build": "npm run clean && NODE_ENV=development vite build --mode development",
     "build:prod": "npm run clean && NODE_ENV=production vite build",
     "build:watch": "vite build --watch",
     "clean": "rm -rf dist",
