feat: configure production endpoints and improve variant extraction
- Add S3 dashboard URL to manifest externally_connectable permissions
- Update API config to use AWS backend in production mode
- Switch dashboard URL to S3-hosted version for production builds
- Improve build scripts to use proper Vite mode flags
- Enhance variant extraction with comprehensive DOM detection
- Add vendor-specific image extraction for Amazon/Target/Walmart
- Implement multi-phase image extraction strategy
- Add extensive logging for variant and image extraction debugging

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run clean && NODE_ENV=development vite build --mode development",
-    "build:prod": "npm run clean && NODE_ENV=production vite build",
+    "build": "npm run clean && vite build --mode development",
+    "build:prod": "npm run clean && vite build --mode production",
     "build:watch": "vite build --watch",
     "clean": "rm -rf dist",
     "preview": "vite preview",
