feat: Add comprehensive debugging tools and fix environment variable loading
- Add debug scripts (debug-vite-config.js, debug-build.js) for troubleshooting build process
- Add VS Code launch configurations for debugging Vite builds
- Fix environment variable loading in vite.config.ts with explicit dotenv config
- Update all config files to use VITE_* environment variables instead of hardcoded values
- Add loading indicator and improved error handling in popup App.tsx
- Add clearAllAuthData function for debugging authentication issues
- Update Firebase config to validate required environment variables
- Add comprehensive logging throughout authentication and API flows
- Fix dashboard URL configuration to use environment variables
- Add npm scripts for debugging builds in both dev and production modes

This resolves environment variable loading issues and provides tools for debugging
build processes and authentication flows.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test:sites": "node test-different-sites.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "debug:config": "node debug-vite-config.js",
+    "debug:build": "node debug-build.js",
+    "debug:build:dev": "node debug-build.js development",
+    "debug:build:prod": "node debug-build.js production"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
