refactor: reorganize project structure and clean up repository
- Move documentation files to docs/ directory:
  - ARCHITECTURE.md -> docs/ARCHITECTURE.md
  - CHROME_EXTENSION_ANALYSIS.md -> docs/CHROME_EXTENSION_ANALYSIS.md

- Organize development scripts:
  - debug-build.js -> scripts/debug-build.js
  - Remove debug-vite-config.js (no longer needed)

- Update manifest.json:
  - Add privacy_policy field pointing to production URL

- Update package.json scripts:
  - Update debug script paths to reference scripts/ directory
  - Remove debug:config script

- Clean up privacy policy:
  - Remove privacy-policy.html (will be hosted externally)
  - Update documentation references

- Update documentation:
  - README.md: Update privacy policy checklist item
  - MVP_OUTSTANDING_TASKS.md: Remove privacy policy file reference

This reorganization creates a cleaner, more maintainable project structure
with proper separation of concerns and removes build artifacts and unused files.

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "DealPop Tracker",
   "version": "1.0.0",
   "description": "Track product prices and get notified when they drop",
+  "privacy_policy": "https://d13kgequzx7lkd.cloudfront.net/beta/privacy",
   "permissions": ["activeTab", "scripting", "storage", "tabs"],
   "host_permissions": [
     "https://deal-pop.firebaseapp.com/*",
