--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "type-check": "tsc --noEmit",
-    "debug:config": "node debug-vite-config.js",
-    "debug:build": "node debug-build.js",
-    "debug:build:dev": "node debug-build.js development",
-    "debug:build:prod": "node debug-build.js production"
+    "debug:build": "node scripts/debug-build.js",
+    "debug:build:dev": "node scripts/debug-build.js development",
+    "debug:build:prod": "node scripts/debug-build.js production"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
